--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	</head>
 	
 	<body>
-		<p id="paragraph"><p>
+		<p id = "w1"></p>
+		<input type="text" id ="second"></input>
+		<p id = "w2"></p>
 		<script src = "TWG.js">
 			
 		</script>
