--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 		<p id = "w1"></p>
 		<input type="text" id ="second"></input>
-		<p id = "w3"></p>
+		<button onlclcick ="verify()">Submit</button>
+		<p id = "w2"></p>
 		<script src = "TWG.js">
 			
 		</script>
