--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<p id = "w1"></p>
 		<input type="text" id ="second"></input>
+		<button type="submit">Submit!</button>
 		<p id = "w3"></p>
 		<script src = "TWG.js">
 			
