--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<p id = "w1"></p>
 		<input type="text" id ="second"></input>
-		<button onlclcick ="verify()">Submit</button>
+		<button onlclcick ="Play()">Submit</button>
 		<p id = "w2"></p>
 		<script src = "TWG.js">
 			
