--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Triple Word Game </title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src = "TWG.js"></script>
 	</head>
 	
 	<body>
@@ -9,8 +11,7 @@
 		<input type="text" id ="second"></input>
 		<button onclick ="Play()">Submit</button>
 		<p id = "w3"></p>
-		<script src = "TWG.js">
-			
-		</script>
+		
+		
 	</body>
 </html>
