--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!Doctype html>
+<!doctype html>
 <html>
 	<head>
 		<title>Triple Word Game </title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body>
-		<p id = "w1"></p>
-		<input type="text" id ="second"></input>
-		<button onclick ="Play()">Submit</button>
+	  <div class="center">
+	  <p id = "w1"></p>
+		
+		<input height="50" type="text" id ="second"></input>
+		</div>
+		
 		<p id = "w3"></p>
+		<button class="center" onclick ="Play()">Submit</button>
 		<script src = "TWG.js">
 			
 		</script>
