--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<title>Triple Word Game </title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		
 		<script src = "TWG.js"></script>
 	</head>
 	
 	<body>
+	<input type="file" name="File Upload" id="txtFileUpload" accept=".csv" /> 
+	<button onclick = ""
 		<p id = "w1"></p>
-		<input type="text" id ="second"></input>
+		<input type="text" id ="second"></input> 
 		<button onclick ="Play()">Submit</button>
 		<p id = "w3"></p>
 		
