--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<title>Linkage </title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		
 		<script src = "TWG.js"></script>
+		
 	</head>
 	
 	<body>
 	
-		<p id = "w1"></p>
-		<input type="text" id ="w2"></input> 
-		<button onclick ="Play()">Submit</button>
-		<p id = "w3"></p>
+		<p id = "first"></p>
+		<input type="text" id = "second"></input> 
+		<button onclick = "Play()">Submit</button>
+		<p id = "third"></p>
 		
 		
 	</body>
