--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<title>Linkage </title>
 		
 		<script src = "TWG.js"></script>
-		
 	</head>
 	
 	<body>
 	
 		<p id = "first"></p>
 		<input type="text" id = "second"></input> 
-		<button onclick = "Play()">Submit</button>
+		<button id = "submission">Submit</button>
 		<p id = "third"></p>
+		
 		
 		
 	</body>
