--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Linkage </title>
 		<style>
-		h1
+		#titleImage
 		{
-			margin-left: 46%;
+			margin-left: 30%;
 		}
 		#correctness
 		{
@@ -38,9 +38,7 @@
 	</head>
 	
 	<body>
-		<h1 id = "Title">
-			Linkage
-		</h1>
+		<img id = "titleImage" src = "Linkage.jpg" style = "width:500px; height: 200px" ></img>
 		<h3 id = "instruction">
 			Linkage is based off common phrases and compound words in the English language.
 			You are given a word, a blank and another word. The task is to find a word
